tests/parser/valid/statements/if_else.src
fn test1(x int) -> int {
    if (x > 0) {
        return 1;
    }
    return 0;
}

fn test2(x int) -> int {
    if (x > 0) {
        return 1;
    } else {
        return -1;
    }
}

fn test3(x int) -> int {
    if (x > 0) {
        return 1;
    } else if (x < 0) {
        return -1;
    } else {
        return 0;
    }
}

fn test4(x int) -> int {
    if (x > 0) 
        return 1;
    else if (x < 0) 
        return -1;
    else 
        return 0;
}

fn test5(x int, y int) -> int {
    if (x > 0) {
        if (y > 0) {
            return x + y;
        } else {
            return x;
        }
    } else {
        if (y > 0) {
            return y;
        } else {
            return 0;
        }
    }
}