tests/parser/invalid/syntax_errors/missing_paren.src
fn test() -> void {
    if (x > 0 {
        return;
    }
}